--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,11 @@ section.features .row .d-flex {
     padding: 40px 10px;
     margin-bottom: 20px;
     max-height: 190px;
+    transition: .3s all ease-in-out;
+}
+
+section.features .row .d-flex:hover {
+    transform: translateY(-5px)
 }
 
 section.features .row .d-flex h4 {
